--- a/app/style.module.scss
+++ b/app/style.module.scss
@@ -1,8 +1,23 @@
+$warning-color: #b80000;
+
 .bg-warning {
   animation-name: bg-warning;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-timing-function: ease;
+}
+.text-warning {
+  animation-name: text-warning;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease;
+}
+
+.bg-closed {
+  background-color: $warning-color;
+}
+.text-closed {
+  color: $warning-color;
 }
 
 @keyframes bg-warning {
@@ -10,9 +25,21 @@
     background-color: inherit;
   }
   50% {
-    background-color: rgb(184, 0, 0);
+    background-color: $warning-color;
   }
   100% {
     background-color: inherit;
+  }
+}
+
+@keyframes text-warning {
+  0% {
+    color: inherit;
+  }
+  50% {
+    color: $warning-color;
+  }
+  100% {
+    color: inherit;
   }
 }
