Feat: 타이머 로직 완성 및 README 작성

--- a/app/style.module.scss
+++ b/app/style.module.scss
@@ -15,9 +15,13 @@ $warning-color: #b80000;
 
 .bg-closed {
   background-color: $warning-color;
+  transition: 0.5s;
+  opacity: 1;
 }
 .text-closed {
   color: $warning-color;
+  transition: 0.5s;
+  opacity: 1;
 }
 
 @keyframes bg-warning {
